<resources>
    <string name="app_name">Chapter2_LoginPage</string>
    <string name="Image_on_Background">Background Image</string>
    <string name="label_username">Username</string>
    <string name="label_enterUserName">Username or Email</string>
    <string name="label_password">Password</string>
    <string name="label_phoneNumber">Phone no.</string>
    <string name="Title_login">Login</string>
    <string name="Title_registration">Registration</string>
    <string name="text_button_forget">Forget Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="text_button_register">don\'t have an account? Sign Up</string>
    <string name="label_enterPassword">Create Password</string>
    <string name="btn_load">Load</string>
    <string name="label">Price</string>
    <string name="modelNO"><b>Model No.</b></string>
    <string name="engine"><b>Engine :</b></string>
    <string name="price"><b>Price :</b></string>
</resources>